--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ header .logo {
   color: rgb(84, 177, 227);
   font-size: 1.5rem;
   font-weight: bold;
+  letter-spacing: 0.25rem;
 }
 header .buttons a {
   text-decoration: none;
@@ -94,8 +95,12 @@ header .buttons a:hover {
 .banner {
   height: 15vh;
   display: flex;
-  align-items: end;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  line-height: 20px;
+}
+.welcome {
+  height: 50%;
 }
 .banner > div {
   display: flex;
@@ -103,11 +108,38 @@ header .buttons a:hover {
   align-items: start;
 }
 .banner h3 {
-  /** TEXT GRADIENT */
+  font-weight: bolder;
+  text-transform: capitalize;
   color: #03c180;
   background-image: -webkit-linear-gradient(0deg, #03c180 33%, #56b1b8 59%);
   background-clip: text;
   -webkit-background-clip: text;
-  text-fill-color: transparent;
   -webkit-text-fill-color: transparent;
+}
+
+.hero {
+  display: flex;
+  position: relative;
+  width: 100vw;
+  height: 50%;
+}
+.left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: linear-gradient(to right, #0768ac, #03c180);
+  clip-path: polygon(0 0, 0 100%, 80% 0);
+}
+.right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #07ac49, #03c180);
+  clip-path: polygon(0 0, 100% 0, 100% 100%);
+  /* clip-path: polygon(100% 0, 100% 100%, 0 0); */
 }
