--- a/css/style.css
+++ b/css/style.css
@@ -142,17 +142,14 @@ header .buttons a:hover {
   height: 100%;
   background: linear-gradient(to right, #07ac49, #03c180);
   clip-path: polygon(0 0, 100% 0, 100% 100%);
-  /* clip-path: polygon(100% 0, 100% 100%, 0 0); */
 }
 .courses {
   background-color: #ecf9fa;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 60px 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(255px, 1fr));
+  gap: 1em;
 }
 .course-card {
-  width: 17%;
   min-height: 300px;
   background-color: #f0f0f0;
   border-radius: 7px;
