create the search bar

--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,45 @@ header .buttons a:hover {
   background: linear-gradient(to right, #07ac49, #03c180);
   clip-path: polygon(0 0, 100% 0, 100% 100%);
 }
-.courses {
+.main {
   background-color: #ecf9fa;
+  padding-top: 2em;
+}
+.search-and-filter {
+  padding-left: 0.5em;
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+}
+.filters {
+  min-width: 30%;
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+.filters > div {
+  min-width: 50%;
+  border-left: 1px solid #c9c9c9;
+  padding: 0.5em;
+}
+.sort,
+.filter {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.select {
+  display: flex;
+  justify-content: space-between;
+}
+.count {
+  margin-bottom: 1em;
+}
+.courses {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(255px, 1fr));
   gap: 1em;
@@ -155,7 +192,6 @@ header .buttons a:hover {
   border-radius: 7px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
   transition: all 0.3s ease;
-  margin: 10px;
 }
 .course-card:hover {
   transform: scale(1.02);
