--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url(variables.css);
 /* 1. Use a more-intuitive box-sizing model. */
 *,
 *::before,
@@ -16,6 +17,8 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: "Nunito Sans", sans-serif;
+  background-color: var(--bg_default);
+  color: var(--body-text);
 }
 /* 5. Improve media defaults */
 img,
@@ -71,7 +74,7 @@ header {
   min-height: 8vh;
 }
 header .logo {
-  color: rgb(84, 177, 227);
+  color: var(--brand-primary);
   font-size: 1.5rem;
   font-weight: bold;
   letter-spacing: 0.25rem;
@@ -79,8 +82,8 @@ header .logo {
 header .buttons a {
   text-decoration: none;
   font-size: 1rem;
-  color: black;
-  border: 1px solid #c9c9c9;
+  color: var(--body-text);
+  border: 1px solid var(--lines-color);
   width: 180px;
   border-radius: 4px;
   letter-spacing: 0.5px;
@@ -89,8 +92,8 @@ header .buttons a {
   text-transform: capitalize;
 }
 header .buttons a:hover {
-  color: #fff;
-  background-color: rgb(32, 32, 32);
+  color: var(--bg_default);
+  background-color: var(--body-text);
 }
 .banner {
   height: 15vh;
@@ -111,8 +114,12 @@ header .buttons a:hover {
 .banner h3 {
   font-weight: bolder;
   text-transform: capitalize;
-  color: #03c180;
-  background-image: -webkit-linear-gradient(0deg, #03c180 33%, #56b1b8 59%);
+  color: var(--brand-secondary);
+  background-image: -webkit-linear-gradient(
+    0deg,
+    var(--brand-secondary) 33%,
+    var(--brand-primary) 59%
+  );
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -131,7 +138,11 @@ header .buttons a:hover {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background: linear-gradient(to right, #0768ac, #03c180);
+  background: linear-gradient(
+    to right,
+    var(--brand-primary),
+    var(--brand-secondary)
+  );
   clip-path: polygon(0 0, 0 100%, 80% 0);
 }
 .right {
@@ -140,11 +151,11 @@ header .buttons a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to right, #07ac49, #03c180);
+  background: linear-gradient(to right, #07ac49, var(--brand-secondary));
   clip-path: polygon(0 0, 100% 0, 100% 100%);
 }
 .main {
-  background-color: #ecf9fa;
+  background-color: var(--bg_body);
   padding-top: 1em;
 }
 .search {
@@ -156,7 +167,7 @@ header .buttons a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--bg_default);
   border-radius: 7px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
 }
@@ -168,7 +179,7 @@ header .buttons a:hover {
 }
 .filters > div {
   min-width: 50%;
-  border-left: 1px solid #c9c9c9;
+  border-left: 1px solid var(--lines-color);
   padding: 0.5em;
 }
 .sort,
@@ -196,7 +207,7 @@ header .buttons a:hover {
 }
 .course-card {
   min-height: 300px;
-  background-color: #f0f0f0;
+  background-color: var(--bg_default);
   border-radius: 7px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
   transition: all 0.3s ease;
@@ -232,7 +243,7 @@ header .buttons a:hover {
   margin-top: 20px;
 }
 .author {
-  color: #aaaaaa;
+  color: #c9c9c9;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
