--- a/css/style.css
+++ b/css/style.css
@@ -256,3 +256,8 @@ header .buttons a:hover {
 div {
   text-transform: capitalize;
 }
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 0.5em;
+}
