--- a/css/style.css
+++ b/css/style.css
@@ -146,19 +146,18 @@ header .buttons a:hover {
 }
 .courses {
   background-color: #ecf9fa;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   padding: 60px 0;
+  gap: 10px;
 }
 .course-card {
-  width: 17%;
+  /* width: 17%; */
   min-height: 300px;
   background-color: #f0f0f0;
   border-radius: 7px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
   transition: all 0.3s ease;
-  margin: 10px;
 }
 .course-card:hover {
   transform: scale(1.02);
